--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,15 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security
+	compile group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.3.4.RELEASE'
+	// https://mvnrepository.com/artifact/mysql/mysql-connector-java
+	compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.16'
+	// https://mvnrepository.com/artifact/com.alibaba/druid-spring-boot-starter
+	compile group: 'com.alibaba', name: 'druid-spring-boot-starter', version: '1.1.10'
+
+
 }
 
 test {
