--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,8 @@ dependencies {
 	// https://mvnrepository.com/artifact/com.alibaba/druid-spring-boot-starter
 	compile group: 'com.alibaba', name: 'druid-spring-boot-starter', version: '1.1.10'
 
-
+	compileOnly 'org.projectlombok:lombok:1.18.16'
+	annotationProcessor  'org.projectlombok:lombok:1.18.16'
 }
 
 test {
