--- a/build.gradle
+++ b/build.gradle
@@ -17,14 +17,19 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
+	implementation 'org.springframework.boot:spring-boot-starter-security:2.3.4.RELEASE'
 	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security
-	compile group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.3.4.RELEASE'
+//	compile group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.3.4.RELEASE'
+	implementation 'mysql:mysql-connector-java:8.0.16'
 	// https://mvnrepository.com/artifact/mysql/mysql-connector-java
-	compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.16'
+//	compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.16'
 	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa
-	compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.1.4.RELEASE'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.1.4.RELEASE'
+//	compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.1.4.RELEASE'
 	// https://mvnrepository.com/artifact/com.alibaba/druid-spring-boot-starter
-	compile group: 'com.alibaba', name: 'druid-spring-boot-starter', version: '1.1.10'
+	// 'com.alibaba:druid-spring-boot-starter:1.1.10'
+	implementation 'com.alibaba:druid-spring-boot-starter:1.1.10'
+//	compile group: 'com.alibaba', name: 'druid-spring-boot-starter', version: '1.1.10'
 
 	compileOnly 'org.projectlombok:lombok:1.18.16'
 	annotationProcessor  'org.projectlombok:lombok:1.18.16'
