--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok:1.18.16'
 	annotationProcessor  'org.projectlombok:lombok:1.18.16'
 	implementation 'com.github.wnameless.spring:spring-security-jjwt:0.2.0'
+	implementation 'com.alibaba:fastjson:1.2.75'
 }
 
 test {
