--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -12,7 +12,7 @@ spring:
   autoconfigure:
     exclude: com.alibaba.druid.spring.boot.autoconfigure.DruidDataSourceAutoConfigure
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/security_demo?characterEncoding=UTF-8&useUnicode=true&useSSL=false&tinyInt1isBit=false
+    url: jdbc:mysql://127.0.0.1:3306/security_demo?serverTimezone=UTC&characterEncoding=UTF-8&useUnicode=true&useSSL=false&tinyInt1isBit=false
     username: root
     password: root
     driver-class-name: com.mysql.jdbc.Driver
